--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -1,4 +1,4 @@
-/* div.card {
+div.card {
     width: 250px;
     height: 300px;
     background: white;
@@ -29,4 +29,4 @@ div.cardtext h4{
 
 div.cardtext p{
     font-size: 12px
-} */
+}
